'avro.java.string' support in  fast-avro (#66)
* 'avro.java.string' support in fast-avro

* Code gen for #66